--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlin_version}"
         classpath "org.flywaydb:flyway-gradle-plugin:${flyway_version}"
         classpath "io.ebean:ebean-gradle-plugin:10.2.2"
-        classpath 'com.h2database:h2:1.4.191'
     }
 }
 
-// apply plugin: 'java'
 apply plugin: "idea"
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
@@ -37,7 +35,7 @@ repositories {
     mavenCentral()
 }
 sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
+    main.kotlin.srcDirs += [file("$buildDir/generated/source/kaptKotlin/main")]
 }
 
 idea {
@@ -47,13 +45,18 @@ idea {
     }
 }
 
+ebean {
+    debugLevel = 9
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
     compile "io.ebean:ebean:10.4.2"
     compile "io.ebean:ebean-querybean:10.3.1"
-    compile 'com.h2database:h2:1.4.191'
+    runtime 'org.postgresql:postgresql'
     kapt "io.ebean:kotlin-querybean-generator:10.1.2"
     testCompile "org.springframework.boot:spring-boot-starter-test"
 }
@@ -63,9 +66,9 @@ kapt {
 }
 
 flyway {
-    user = 'sa'
-    password = ''
-    url = 'jdbc:h2:mem:tests'
+    user = 'postgres'
+    password = 'postgres'
+    url = 'jdbc:postgresql://localhost:5432/postgres'
 }
 
 
