--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -1,11 +1,7 @@
-ebean.ddl.generate=true
-ebean.ddl.run=true
-ebean.packages=org.tests
-datasource.default=h2
+datasource.default=db
 
-datasource.h2.username=sa
-datasource.h2.password=
-datasource.h2.databaseUrl=jdbc:h2:mem:tests
-datasource.h2.databaseDriver=org.h2.Driver
-datasource.h2.minConnections=1
-datasource.h2.maxConnections=25
+datasource.db.username=postgres
+datasource.db.password=postgres
+datasource.db.databaseUrl=jdbc:postgresql://localhost:5432/postgres
+datasource.db.databaseDriver=org.postgresql.Driver
+
